[gd_scene load_steps=4 format=2]

[ext_resource path="res://Lobby/WaitingRoom.tscn" type="PackedScene" id=1]
[ext_resource path="res://Lobby/Lobby.gd" type="Script" id=2]

[sub_resource type="Theme" id=1]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 14.0
text = "Lobby"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 1024.0
margin_bottom = 98.0

[node name="ConfigContainer" type="GridContainer" parent="VBoxContainer/CenterContainer"]
margin_left = 388.0
margin_right = 636.0
margin_bottom = 80.0
custom_constants/vseparation = 4
custom_constants/hseparation = 10
columns = 2

[node name="NameLabel" type="Label" parent="VBoxContainer/CenterContainer/ConfigContainer"]
margin_top = 5.0
margin_right = 38.0
margin_bottom = 19.0
text = "Name"
align = 2

[node name="NameEdit" type="LineEdit" parent="VBoxContainer/CenterContainer/ConfigContainer"]
margin_left = 48.0
margin_right = 248.0
margin_bottom = 24.0
rect_min_size = Vector2( 200, 0 )
text = "Player"
align = 1

[node name="IPLabel" type="Label" parent="VBoxContainer/CenterContainer/ConfigContainer"]
margin_top = 33.0
margin_right = 38.0
margin_bottom = 47.0
text = "IP"
align = 2

[node name="IPEdit" type="LineEdit" parent="VBoxContainer/CenterContainer/ConfigContainer"]
margin_left = 48.0
margin_top = 28.0
margin_right = 248.0
margin_bottom = 52.0
rect_min_size = Vector2( 200, 0 )
text = "127.0.0.1"
align = 1

[node name="PortLabel" type="Label" parent="VBoxContainer/CenterContainer/ConfigContainer"]
margin_top = 61.0
margin_right = 38.0
margin_bottom = 75.0
text = "Port"
align = 2

[node name="PortEdit" type="LineEdit" parent="VBoxContainer/CenterContainer/ConfigContainer"]
margin_left = 48.0
margin_top = 56.0
margin_right = 248.0
margin_bottom = 80.0
rect_min_size = Vector2( 200, 0 )
text = "32032"

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer"]
margin_top = 102.0
margin_right = 1024.0
margin_bottom = 122.0

[node name="ButtonsContainer" type="GridContainer" parent="VBoxContainer/CenterContainer2"]
margin_left = 429.0
margin_right = 594.0
margin_bottom = 20.0
columns = 2

[node name="HostButton" type="Button" parent="VBoxContainer/CenterContainer2/ButtonsContainer"]
margin_right = 84.0
margin_bottom = 20.0
text = "Host Game"

[node name="JoinButton" type="Button" parent="VBoxContainer/CenterContainer2/ButtonsContainer"]
margin_left = 88.0
margin_right = 165.0
margin_bottom = 20.0
text = "Join Game"

[node name="WaitingRoom" parent="." groups=["WaitingRoom"] instance=ExtResource( 1 )]

[node name="ItemList" parent="WaitingRoom/VBoxContainer/CenterContainer" index="0"]
margin_top = 13.0
margin_bottom = 13.0
items = [ "Item 0", null, false ]

[connection signal="text_changed" from="VBoxContainer/CenterContainer/ConfigContainer/NameEdit" to="." method="_on_NameEdit_text_changed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer2/ButtonsContainer/HostButton" to="." method="_on_HostButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer2/ButtonsContainer/JoinButton" to="." method="_on_JoinButton_pressed"]
[connection signal="pressed" from="WaitingRoom/VBoxContainer/CenterContainer2/StartButton" to="." method="_on_StartButton_pressed"]

[editable path="WaitingRoom"]
